[gd_scene load_steps=3 format=3 uid="uid://bobprp3tgytcg"]

[ext_resource type="Script" uid="uid://bvd3xgkxi52qm" path="res://ui/components/equipment_slot.gd" id="1_0x8k2"]
[ext_resource type="Theme" uid="uid://bxlt2ju7qgrqv" path="res://theme.tres" id="2_theme"]

[node name="EquipmentSlot" type="Panel"]
custom_minimum_size = Vector2(80, 100)
theme = ExtResource("2_theme")
script = ExtResource("1_0x8k2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 10
text = "Slot"
horizontal_alignment = 1

[node name="ItemContainer" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3

[node name="ItemIcon" type="TextureRect" parent="VBoxContainer/ItemContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="EmptyLabel" type="Label" parent="VBoxContainer/ItemContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 9
text = "Empty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RarityBorder" type="Panel" parent="VBoxContainer/ItemContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DisabledOverlay" type="Panel" parent="VBoxContainer/ItemContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
